Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -137,6 +137,8 @@
 
 <p>You could use <code>nested</code>, <code>expanded</code>, <code>compact</code> and <code>compressed</code> as output style.</p>
 
+<h2>REPL</h2>
+
 <p>Pixate gem provides "style" method in REPL. You could change the stylesheet at the moment in REPL. For example,</p>
 
 <pre><code>(main)&gt; style "button { color : blue; }"
